--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "unistd.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "config.h": "c",
+        "signal.h": "c",
+        "utils.h": "c",
+        "motorcontrol.h": "c"
     }
 }
