--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         "signal.h": "c",
         "utils.h": "c",
         "motorcontrol.h": "c"
+        "utils.h": "c",
+        "motorcontrol.h": "c",
+        "config_loader.h": "c"
     }
 }
