--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,12 +10,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dnd-multi-backend": "^8.0.3",
-    "express": "^4.18.2",
     "gcode-parser": "^1.3.7",
     "highlight.js": "^11.9.0",
-    "mongodb": "^5.1.0",
-    "mongoose": "^8.0.1",
     "react": "^18.2.0",
+    "react-ace": "^11.0.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -24,7 +22,6 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
-    "three": "^0.160.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
