--- a/Backend/WebServer/package.json
+++ b/Backend/WebServer/package.json
@@ -5,13 +5,21 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "nodemon": "nodemon server.js",
+    "client": "cd.. && cd.. & cd Frontend && npm start",
+    "dev": "concurrently \"npm run nodemon\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "async-mqtt": "^2.6.3",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "3.1.0"
   }
 }
