--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "testprojekt",
+  "name": "Deltarobot",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3010",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
