--- a/Backend/WebServer/package.json
+++ b/Backend/WebServer/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "nodemon": "nodemon server.js",
-    "client": "cd.. && cd.. & cd Frontend && npm start",
+    "client": "cd .. && cd .. && cd Frontend && npm start",
     "dev": "concurrently \"npm run nodemon\" \"npm run client\""
   },
   "author": "",
