--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,8 +21,10 @@
     "react-dnd-multi-backend": "^8.0.3",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
+    "recoil": "^0.7.7",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
