--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
+    "react-unity-webgl": "^9.5.2",
     "recoil": "^0.7.7",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
