--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "react-transition-group": "^4.4.5",
     "react-unity-webgl": "^9.5.2",
     "recoil": "^0.7.7",
+    "three": "^0.164.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
