--- a/Bash/deltarobot.service
+++ b/Bash/deltarobot.service
@@ -1,11 +1,13 @@
 [Unit]
-Description= Skript welche alle Services startet
+Description=Deltaroboter Service
+After=network.target
 
 [Service]
 Type=simple
-ExecStart=/bin/sh /home/pi/Deltarobot/Bash/start.sh
+ExecStart=/bin/bash /home/pi/Deltaroboter/Bash/start.sh
+WorkingDirectory=/home/pi/Deltaroboter/Bash
 Restart=always
-User=pi
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
