--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dat.gui": "^0.7.9",
     "dnd-multi-backend": "^8.0.3",
     "gcode-parser": "^1.3.7",
     "highlight.js": "^11.9.0",
